add jvm gc arguments